--- a/layouts/index.html
+++ b/layouts/index.html
@@ -60,7 +60,7 @@
         <div class="relative video-wrapper max-w-max">
           <a href="{{ .Permalink }}" class="block relative">
             <img width="400" height="300" src="{{ .Params.og_landscape }}" alt="thumbnail"
-              class="md:rounded-[30px] rounded-2xl lg:max-w-[400px] md:max-w-[300px] max-w-[330px] xl:h-[300px] lg:h-[330px] md:h-[265px] h-[195px]" />
+              class="md:rounded-[30px] rounded-2xl lg:max-w-[400px] md:max-w-[300px] max-w-[330px] xl:h-[300px] lg:h-[330px] md:h-[265px] h-[195px] object-cover object-center" />
             <img width="69" height="69" src="{{ $.Site.BaseURL }}img/svg/play-btn.svg" alt="play"
               class="rounded-full cursor-pointer sm:max-w-[69px] sm:h-[69px] max-sm:size-11 absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 play-button hover:scale-110 transition-transform duration-200" />
           </a>
