Add training banner parameters and update header to display dynamic content

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -95,8 +95,8 @@
     </div>
   </section>
 
-  <!-- ===== SUBSCRIBE PODCAST ===== -->
-  <section id="subscribe-podcast" class="md:pt-[102px] sm:pt-20 pt-10 md:pb-[147px] sm:pb-24 pb-[45px] relative">
+  <!-- ===== PLATFORMS ===== -->
+  <section id="platforms" class="md:pt-[102px] sm:pt-20 pt-10 md:pb-[147px] sm:pb-24 pb-[45px] relative">
     <img src="{{ .Site.BaseURL }}img/svg/one-star.svg"
       class="absolute top-[-10%] md:top-[-19%] z-10 right-[100px] sm:right-[156px] md:right-[206px] lg:right-[306px] size-[28px] sm:size-[50px] lg:size-[74px] animate-float1 min-[2100px]:!right-[clamp(40px,39vw,26%)] min-[4000px]:!right-[clamp(40px,39vw,39%)]" />
     <img src="{{ .Site.BaseURL }}img/svg/cross.svg" width="105" height="105"
@@ -365,8 +365,8 @@
     </div>
   </section>
 
-  <!-- ===== SPONSOR SECTION ===== -->
-  <section id="sponsor" class="pt-[30px] sm:pt-[60px] md:pt-[90px] max-[470px]:pb-[100px] pb-[140px] sm:pb-[170px] md:pb-52 lg:pb-64 xl:pb-72 bg-orange relative">
+  <!-- ===== PROTOPIA SECTION ===== -->
+  <section id="protopia" class="pt-[30px] sm:pt-[60px] md:pt-[90px] max-[470px]:pb-[100px] pb-[140px] sm:pb-[170px] md:pb-52 lg:pb-64 xl:pb-72 bg-orange relative">
     <img src="{{ .Site.BaseURL }}img/png/protopia-bottom-layer.png" alt="bottom-layer"
       class="absolute bottom-0 z-[1] w-full max-h-[297px] pointer-events-none" />
 
