--- a/layouts/partials/header-hero.html
+++ b/layouts/partials/header-hero.html
@@ -4,7 +4,7 @@
         <div class="absolute w-full h-full left-0 top-0 z-[1]" style="background: #ff4405"></div>
 
         <div class="absolute w-full h-full left-0 top-0 z-[2]" style="
-            background: url('{{ .Site.BaseURL }}img/gif/herobg.gif');
+            background: url('{{ .Site.BaseURL }}img/webp/herobg.webp');
             mix-blend-mode: overlay;
             background-size: cover;
             background-position: center;
