Update button to link for contact and add new SVG icon for call

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -296,15 +296,17 @@
               teorii. Skontaktuj się z nami, a stworzymy szkolenie idealnie
               dopasowane do Twoich specjalistów.
             </p>
-            <button
-              class="bg-white w-max font-semibold lg:text-xl sm:text-lg text-custom-base leading-100 text-dark-black flex items-center sm:gap-3 gap-2.5 sm:py-[5px] py-[3.75px] sm:ps-[5px] ps-[3.75px] sm:pe-[28px] pe-[18px] rounded-full lg:min-w-[243px] transition-all ease-linear duration-300 group">
-              <div
-                class="bg-yellow sm:size-[36px] size-7 flex justify-center items-center rounded-full group-hover:max-w-[48px] group-hover:w-[48px] transition-all ease-linear duration-300">
-                <img width="23" height="22" src="{{ .Site.BaseURL }}img/svg/arrow-icon.svg"
-                  class="rounded-full lg:w-[22px] lg:h-5 size-4" />
-              </div>
-              Skontaktuj się z nami
-            </button>
+            <a href="/szkolenia/#coordinator">
+              <button
+                class="bg-white w-max font-semibold lg:text-xl sm:text-lg text-custom-base leading-100 text-dark-black flex items-center sm:gap-3 gap-2.5 sm:py-[5px] py-[3.75px] sm:ps-[5px] ps-[3.75px] sm:pe-[28px] pe-[18px] rounded-full lg:min-w-[243px] transition-all ease-linear duration-300 group">
+                <div
+                  class="bg-yellow sm:size-[36px] size-7 flex justify-center items-center rounded-full group-hover:max-w-[48px] group-hover:w-[48px] transition-all ease-linear duration-300">
+                  <img width="23" height="22" src="{{ .Site.BaseURL }}img/svg/arrow-icon.svg"
+                    class="rounded-full lg:w-[22px] lg:h-5 size-4" />
+                </div>
+                Skontaktuj się z nami
+              </button>
+            </a>
           </div>
         </div>
         <div class="flex flex-col gap-6 sm:gap-9 lg:gap-[45px]">
