Update contact information in the training section for better accessibility

--- a/layouts/training/list.html
+++ b/layouts/training/list.html
@@ -353,8 +353,9 @@
           <p
             class="lg:text-2xl sm:text-xl max-sm:max-w-[278px] !leading-[105%] text-dark-black md:!leading-120 max-w-[778px] pt-[25px] lg:pt-[31px]">
             Masz pytania? Chcesz ogarnąć szkolenie dedykowane dla
-            Twojej firmy? Nasz człowiek od zadań specjalnych, czeka na Twój znak. Napisz do niego, a wszystko stanie się
-            jasne.</p>
+            Twojej firmy? Nasz człowiek od zadań specjalnych, czeka na Twój znak. Zadzwoń, napisz na
+            <span class="italic font-medium">mikolaj.szczerbicki@protopia.tech</span>
+            lub skorzystaj z przycisków poniżej.</p>
         </div>
         <img class="lg:w-[327px] lg:h-[325px] rounded-full sm:size-[250px] size-[170px]" src="/img/png/trainer-img.png"
           alt="trainer-img">
