Implement newsletter subscription functionality with Turnstile verification

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -426,9 +426,10 @@
         <img
           class="max-w-[58px] max-h-[21.21px] sm:max-w-[80px] sm:max-h-[31.31px] md:max-w-[120px] md:max-h-[41.41px] lg:max-w-[177px] lg:max-h-[64px] w-full h-full absolute top-[55%] sm:left-[5%] sm:top-[45%]"
           src="{{ .Site.BaseURL }}img/svg/input-arrow.svg" alt="input-arrow-svg" />
-        <form id="emailForm" class="flex flex-col gap-14 sm:gap-[93px] mx-auto mb-8 items-center max-w-[500px]">
-          <input type="email" id="emailInput" placeholder="Adres e-mail" required
+        <form id="emailForm" class="flex flex-col gap-14 sm:gap-[93px] mx-auto mb-8 items-center max-w-[500px]" action="/api/newsletter" method="POST">
+          <input type="email" id="emailInput" name="email" placeholder="Adres e-mail" required
             class="flex-1 px-4 py-[6px] border-b-2 border-orange text-grey placeholder-grey focus:outline-none focus:border-orange text-xs sm:text-sm md:text-base lg:text-2xl max-w-[237px] sm:max-w-full text-center font-medium w-full" />
+          <div class="cf-turnstile" data-sitekey="0x4AAAAAAB3rTpbU6V5I845R"></div>
           <div>
             <button type="submit"
               class="bg-orange text-[17.23px] sm:text-2xl text-dark-black uppercase px-[71.5px] sm:px-[111px] py-[2.1px] sm:py-[6.5px] rounded-full font-bold hover:bg-dark-black hover:text-orange transition-all duration-300 ease-linear">
@@ -436,6 +437,7 @@
             </button>
           </div>
         </form>
+        <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
         <p id="errorMsg" class="text-red-500 font-medium mt-2 hidden">
           Wprowadź poprawny adres e-mail.
         </p>
