--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,7 @@
   <!-- ===== FOOTER SECTION ===== -->
   <footer class="bg-dark-black -mt-[2px] pb-[35px] sm:pb-[65px] relative">
     <img src="/img/png/footer-top-layer.png" alt="bottom-layer"
-      class="absolute -top-[93px] sm:-top-[184px] z-[-1] lg:-top-[296px] w-full h-[95px] sm:h-[192px] lg:h-[297px] pointer-events-none" />
+      class="absolute -top-[93px] sm:-top-[184px] lg:-top-[296px] w-full h-[95px] sm:h-[192px] lg:h-[297px] pointer-events-none" />
     <img src="/img/svg/footer-right-icon.svg" alt="right-half-flower"
       class="absolute end-0 top-[45%] md:top-[27%] max-w-[41px] sm:max-w-[45px] md:max-w-[70px] xl:max-w-[303px] pointer-events-none min-[2800px]:!right-[clamp(40px,39vw,27%)] min-[4000px]:!right-[clamp(40px,39vw,35%)]" />
     <div class="max-w-[1219px] mx-auto flex flex-wrap justify-between gap-6 max-xl:px-[30px] py-[50px] sm:py-[48.5px]">
