Enhance newsletter form with Turnstile token handling and submission logic

--- a/layouts/episodes/single.html
+++ b/layouts/episodes/single.html
@@ -234,8 +234,8 @@
         sm:left-[5%] sm:top-[45%]
          " src="/images/svg/input-arrow.svg" alt="input-arrow-svg">
             <form id="emailForm" class="flex flex-col gap-14 sm:gap-[93px] mx-auto mb-8 items-center max-w-[500px]">
-                <input type="email" id="emailInput" placeholder="Adres e-mail" required
-                    class="flex-1 px-4 py-[6px] border-b-2 border-orange text-grey placeholder-grey focus:outline-none focus:border-orange text-xs sm:text-sm md:text-base lg:text-2xl max-w-[237px] sm:max-w-full text-center font-medium w-full" />
+                <input type="email" id="emailInput" name="email" placeholder="Adres e-mail" required
+                    class="flex-1 px-4 py-[6px] border-b-2 border-orange text-dark-black placeholder-grey focus:outline-none focus:border-orange text-xs sm:text-sm md:text-base lg:text-2xl max-w-[237px] sm:max-w-full text-center font-medium w-full" />
                 <div>
                     <button type="submit" class="bg-orange text-[17.23px] sm:text-2xl text-dark-black uppercase 
          px-[71.5px] sm:px-[111px] 
