Add purchase URL for quick consultations and update button text

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -313,7 +313,7 @@
           <div
             class="bg-white hover:bg-skyblue faq-button transition-colors ease-linear duration-300 cursor-pointer group rounded-full p-3 ps-4 sm:ps-6 lg:py-[7.5px] lg:ps-11 lg:pe-[7px] flex justify-between items-center">
             <p class="text-xl sm:text-2xl md:text-4xl lg:text-custom-4xl uppercase font-semibold text-dark-black">
-              Konsultacje
+              Szybkie Konsultacje
             </p>
             <img src="{{ .Site.BaseURL }}img/svg/faq-arrow.svg" alt="faq-arrow"
               class="group-hover:rotate-90 transition-all ease-linear duration-300 size-10 sm:size-12 md:size-[60px] lg:size-[75px]" />
@@ -324,15 +324,15 @@
               Masz problem, który wymaga szybkiego rozwiązania i potrzebujesz
               natychmiastowej pomocy?
             </p>
-            <button
-              class="bg-white w-max font-semibold lg:text-xl sm:text-lg text-custom-base leading-100 text-dark-black flex items-center sm:gap-3 gap-2.5 sm:py-[5px] py-[3.75px] sm:ps-[5px] ps-[3.75px] sm:pe-[28px] pe-[18px] rounded-full lg:min-w-[243px] transition-all ease-linear duration-300 group">
+            <a href="{{ .Site.Params.consultation.purchaseUrl }}" target="_blank"
+              class="bg-white w-max font-semibold lg:text-xl sm:text-lg text-custom-base leading-100 text-dark-black flex items-center sm:gap-3 gap-2.5 sm:py-[5px] py-[3.75px] sm:ps-[5px] ps-[3.75px] sm:pe-[28px] pe-[18px] rounded-full lg:min-w-[243px] transition-all ease-linear duration-300 group inline-flex">
               <div
                 class="bg-skyblue sm:size-[36px] size-7 flex justify-center items-center rounded-full group-hover:max-w-[48px] group-hover:w-[48px] transition-all ease-linear duration-300">
                 <img width="23" height="22" src="{{ .Site.BaseURL }}img/svg/arrow-icon.svg"
                   class="rounded-full lg:w-[22px] lg:h-5 size-4" />
               </div>
               Wykup konsultację
-            </button>
+            </a>
           </div>
         </div>
         <div class="flex flex-col gap-6 sm:gap-9 lg:gap-[45px] mb-0">
@@ -352,15 +352,15 @@
               bezpieczeństwie chmury, zapewniając najlepsze rozwiązania dla
               Twojej firmy.
             </p>
-            <button
-              class="bg-white w-max font-semibold lg:text-xl sm:text-lg text-custom-base leading-100 text-dark-black flex items-center sm:gap-3 gap-2.5 sm:py-[5px] py-[3.75px] sm:ps-[5px] ps-[3.75px] sm:pe-[28px] pe-[18px] rounded-full lg:min-w-[243px] transition-all ease-linear duration-300 group">
+            <a href="{{ .Site.Params.consultation.purchaseUrl }}" target="_blank"
+              class="bg-white w-max font-semibold lg:text-xl sm:text-lg text-custom-base leading-100 text-dark-black flex items-center sm:gap-3 gap-2.5 sm:py-[5px] py-[3.75px] sm:ps-[5px] ps-[3.75px] sm:pe-[28px] pe-[18px] rounded-full lg:min-w-[243px] transition-all ease-linear duration-300 group inline-flex">
               <div
                 class="bg-pink sm:size-[36px] size-7 flex justify-center items-center rounded-full group-hover:max-w-[48px] group-hover:w-[48px] transition-all ease-linear duration-300">
                 <img width="23" height="22" src="{{ .Site.BaseURL }}img/svg/arrow-icon.svg"
                   class="rounded-full lg:w-[22px] lg:h-5 size-4" />
               </div>
               Wykup konsultację
-            </button>
+            </a>
           </div>
         </div>
       </div>
