--- a/layouts/index.html
+++ b/layouts/index.html
@@ -107,7 +107,7 @@
         SUBSKRYBUJ PODCAST
       </h2>
       <div class="flex flex-wrap items-center justify-center xl:gap-[50px] lg:gap-5 gap-7">
-        <a href="https://www.youtube.com/c/PatoArchitekci/videos" target="_blank"
+        <a href="{{ .Site.Params.podcast.youtube }}" target="_blank"
           class="sm:border-2 border-[1.12px] border-solid border-dark-black flex justify-center sm:rounded-[30px] rounded-2xl sm:py-7 py-4 px-9 xl:min-w-[350px] sm:min-w-[300px] min-w-[196px] w-fit group bg-white z-10">
           <svg class="max-lg:w-[135px] max-sm:w-[86px] max-sm:h-[23px]" width="152" height="40" viewBox="0 0 177 40"
             fill="none" xmlns="http://www.w3.org/2000/svg">
