Add host profiles with LinkedIn and Twitter links for Lukasz and Szymon

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -185,11 +185,11 @@
           same konkrety. Zawsze z porządną dawką humoru.
         </p>
         <div class="flex gap-2 sm:gap-3 pb-7 pt-3 sm:pt-5 lg:py-9">
-          <a href="https://www.linkedin.com/company/patoarchitekci/" target="_blank">
+          <a href="{{ .Site.Params.hosts.lukasz.linkedin }}" target="_blank">
             <img src="{{ .Site.BaseURL }}img/svg/linkedin.svg" alt="linkedin"
               class="size-7 sm:size-11 hover:scale-110 duration-300 transition-all ease-in-out" />
           </a>
-          <a href="https://x.com/patoarchitekci" target="_blank">
+          <a href="{{ .Site.Params.hosts.lukasz.twitter }}" target="_blank">
             <img src="{{ .Site.BaseURL }}img/svg/twitter.svg" alt="twitter"
               class="size-7 sm:size-11 hover:scale-110 duration-300 transition-all ease-in-out" />
           </a>
@@ -208,11 +208,11 @@
           jedyne w swoim rodzaju doświadczenie.
         </p>
         <div class="flex gap-2 sm:gap-3 pt-3 sm:pt-5 lg:pt-9">
-          <a href="https://www.linkedin.com/company/patoarchitekci/" target="_blank">
+          <a href="{{ .Site.Params.hosts.szymon.linkedin }}" target="_blank">
             <img src="{{ .Site.BaseURL }}img/svg/linkedin.svg" alt="linkedin"
               class="size-7 sm:size-11 hover:scale-110 duration-300 transition-all ease-in-out" />
           </a>
-          <a href="https://x.com/patoarchitekci" target="_blank">
+          <a href="{{ .Site.Params.hosts.szymon.twitter }}" target="_blank">
             <img src="{{ .Site.BaseURL }}img/svg/twitter.svg" alt="twitter"
               class="size-7 sm:size-11 hover:scale-110 duration-300 transition-all ease-in-out" />
           </a>
